<resources>
    <string name="app_name">Travel Northern Taiwan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_language">LanguageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="language">Language</string>

    <!--Home page activity strings-->
    <string name="TaipeiMainMenu">TaipeiMainMenu</string>
    <string name="NewTaipeiMainMenu">NewTaipeiMainMenu</string>
    <string name="KeelungMainMenu">KeelungMainMenu</string>
    <string name="YilanMainMenu">YilanMainMenu</string>
    <string name="HsinchuMainMenu">HsinchuMainMenu</string>
    <string name="TaoyuanMainMenu">TaoyuanMainMenu</string>

    <string name="title_activity_new_trip">New trip</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <!--Language activity strings-->
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="traditional_chinese">繁體中文</string>
    <string name="simplified_chinese">简体中文</string>

    <string name="enter_password_again">Enter your password again</string>
    <string name="title_activity_my_plan">MyPlanActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_plan">PlanActivity</string>

    <!--New Trip activity strings -->
</resources>


